--- a/samples/subsys/shell/shell_module/prj.conf
+++ b/samples/subsys/shell/shell_module/prj.conf
@@ -11,3 +11,15 @@ CONFIG_DEVICE_SHELL=y
 CONFIG_POSIX_CLOCK=y
 CONFIG_DATE_SHELL=y
 CONFIG_THREAD_RUNTIME_STATS=y
+
+CONFIG_HWINFO=y
+CONFIG_HWINFO_SHELL=y
+CONFIG_GPIO_SHELL=y
+CONFIG_GPIO=y
+CONFIG_FLASH=y
+CONFIG_FLASH_SHELL=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_MAP_SHELL=y
+CONFIG_ADC=y
+CONFIG_ADC_SHELL=y
