tests: gccmipsmti is unusable for cxx tests
Here is part of build.log:

In file included from
/opt/imgtec/Toolchains/mips-mti-elf/2017.10-05/mips-mti-elf/include/c++/6.3.0/array:38:0,
                 from
zephyrproject-rtos/zephyr/tests/application_development/libcxx/src/main.cpp:7:
/opt/imgtec/Toolchains/mips-mti-elf/2017.10-05/mips-mti-elf/include/c++/6.3.0/utility:68:28:
fatal error: bits/c++config.h: No such file or directory
 #include <bits/c++config.h>
                            ^
compilation terminated.

Signed-off-by: Antony Pavlov <antonynpavlov@gmail.com>

--- a/tests/subsys/cpp/libcxx/testcase.yaml
+++ b/tests/subsys/cpp/libcxx/testcase.yaml
@@ -4,14 +4,14 @@ common:
     - mps2_an385
 tests:
   cpp.libcxx.newlib:
-    toolchain_exclude: xcc
+    toolchain_exclude: xcc gccmipsmti
     min_flash: 54
     tags: cpp
     extra_configs:
         - CONFIG_NEWLIB_LIBC_NANO=n
         - CONFIG_EXCEPTIONS=y
   cpp.libcxx.newlib_nano:
-    toolchain_exclude: xcc
+    toolchain_exclude: xcc gccmipsmti
     min_flash: 54
     tags: cpp
     timeout: 30
