toolchain/zephyr: add MIPS support
See https://github.com/zephyrproject-rtos/sdk-ng/issues/314 for details.

Signed-off-by: Antony Pavlov <antonynpavlov@gmail.com>

--- a/arch/mips/CMakeLists.txt
+++ b/arch/mips/CMakeLists.txt
@@ -6,10 +6,18 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-if(CONFIG_BIG_ENDIAN)
-set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT "elf32-tradbigmips")
+if(${ZEPHYR_TOOLCHAIN_VARIANT} STREQUAL "gccmipsmti")
+	if(CONFIG_BIG_ENDIAN)
+		set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT "elf32-tradbigmips")
+	else()
+		set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT "elf32-tradlittlemips")
+	endif()
 else()
-set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT "elf32-tradlittlemips")
+	if(CONFIG_BIG_ENDIAN)
+		set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT "elf32-bigmips")
+	else()
+		set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT "elf32-littlemips")
+	endif()
 endif()
 
 add_subdirectory(core)
